# mcpdome

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  mcpdome.example.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/dome-core/: Cargo.toml  README.md
crates/dome-core/src/: error.rs  lib.rs  message.rs
crates/dome-gate/: Cargo.toml  README.md
crates/dome-gate/src/: lib.rs
crates/dome-ledger/: Cargo.toml  README.md
crates/dome-ledger/src/: chain.rs  entry.rs  lib.rs  logger.rs  sink.rs
crates/dome-policy/: Cargo.toml  README.md
crates/dome-policy/src/: evaluator.rs  lib.rs  parser.rs  types.rs  watcher.rs
crates/dome-sentinel/: Cargo.toml  README.md
crates/dome-sentinel/src/: auth.rs  identity.rs  lib.rs  oauth.rs  resolver.rs
crates/dome-throttle/: Cargo.toml  README.md
crates/dome-throttle/src/: budget.rs  lib.rs  rate_limiter.rs  token_bucket.rs
crates/dome-transport/: Cargo.toml  README.md
crates/dome-transport/src/: http.rs  lib.rs  stdio.rs
crates/dome-ward/: Cargo.toml  README.md
crates/dome-ward/src/: heuristics.rs  lib.rs  patterns.rs  schema_pin.rs
src/: main.rs
tests/: demo.py
tests/fixtures/: echo_server.py
tests/integration/: proxy_test.rs
