[package]
name = "dome-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for MCPDome"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
