[package]
name = "dome-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hash-chained audit logging with multiple sinks for MCPDome"
repository.workspace = true

[features]
test-support = []

[dependencies]
dome-core.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
