[package]
name = "dome-sentinel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Authentication & identity resolution for MCPDome"

[dependencies]
dome-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
