[package]
name = "dome-ward"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Injection detection, schema integrity, and heuristic analysis for MCPDome"
repository.workspace = true

[dependencies]
dome-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
sha2.workspace = true
chrono.workspace = true
unicode-normalization = "0.1"

[dev-dependencies]
serde_json.workspace = true
